// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SegmentedControl matches snapshot (desktop) 1`] = `
.c0 {
  background-color: rgb(0 0 0 / 0.05);
  border-radius: var(--border-radius);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: var(--border-radius);
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  gap: var(--spacing-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1halfx);
  position: relative;
}

.c1:hover {
  background-color: transparent;
  color: #000000;
}

.c1:hover::before {
  background-color: rgb(0 0 0 / 0.05);
  border-radius: var(--border-radius);
  content: " ";
  display: block;
  height: calc(100% - 0.375rem);
  left: 0.1875rem;
  min-height: 1.5rem;
  position: absolute;
  top: 0.1875rem;
  width: calc(100% - 0.375rem);
}

.c1:focus {
  z-index: 1;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1[aria-disabled='true'],
.c1[aria-disabled='true']:hover {
  color: #B7BBC2;
  pointer-events: none;
}

.c1 span::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border: 1px solid #006296;
  border-radius: var(--border-radius);
  color: #003A5A;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  gap: var(--spacing-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  min-height: var(--size-2x);
  padding: 0 var(--spacing-1halfx);
  position: relative;
}

.c2:hover {
  background-color: #C2E2F4;
  color: #003A5A;
}

.c2:hover::before {
  background-color: rgb(0 0 0 / 0.05);
  border-radius: var(--border-radius);
  content: none;
  display: block;
  height: calc(100% - 0.375rem);
  left: 0.1875rem;
  min-height: 1.5rem;
  position: absolute;
  top: 0.1875rem;
  width: calc(100% - 0.375rem);
}

.c2:focus {
  z-index: 1;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2[aria-disabled='true'],
.c2[aria-disabled='true']:hover {
  color: #B7BBC2;
  pointer-events: none;
}

.c2 span::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

<div
  aria-label="Test4"
  class="c0"
  role="group"
>
  <button
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-0"
    type="button"
    value="option1"
  >
    <span
      data-text="Option 1"
    >
      Option 1
    </span>
  </button>
  <button
    aria-pressed="true"
    class="c2"
    data-testid="test-toggle-button-1"
    type="button"
    value="option2"
  >
    <span
      data-text="Option 2"
    >
      Option 2
    </span>
  </button>
  <button
    aria-disabled="true"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-2"
    type="button"
    value="option3"
  >
    <span
      data-text="Option 3"
    >
      Option 3
    </span>
  </button>
  <button
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-3"
    type="button"
    value="option4"
  >
    <span
      data-text="Option 4"
    >
      Option 4
    </span>
  </button>
</div>
`;

exports[`SegmentedControl matches snapshot (mobile) 1`] = `
.c0 {
  background-color: rgb(0 0 0 / 0.05);
  border-radius: var(--border-radius);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: var(--border-radius);
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 1rem;
  font-weight: var(--font-normal);
  gap: var(--spacing-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  min-height: var(--size-3x);
  padding: 0 var(--spacing-1halfx);
  position: relative;
}

.c1:hover {
  background-color: transparent;
  color: #000000;
}

.c1:hover::before {
  background-color: rgb(0 0 0 / 0.05);
  border-radius: var(--border-radius);
  content: " ";
  display: block;
  height: calc(100% - 0.375rem);
  left: 0.1875rem;
  min-height: 1.5rem;
  position: absolute;
  top: 0.1875rem;
  width: calc(100% - 0.375rem);
}

.c1:focus {
  z-index: 1;
}

.c1:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1[aria-disabled='true'],
.c1[aria-disabled='true']:hover {
  color: #B7BBC2;
  pointer-events: none;
}

.c1 span::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border: 1px solid #006296;
  border-radius: var(--border-radius);
  color: #003A5A;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  gap: var(--spacing-1x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  min-height: var(--size-3x);
  padding: 0 var(--spacing-1halfx);
  position: relative;
}

.c2:hover {
  background-color: #C2E2F4;
  color: #003A5A;
}

.c2:hover::before {
  background-color: rgb(0 0 0 / 0.05);
  border-radius: var(--border-radius);
  content: none;
  display: block;
  height: calc(100% - 0.375rem);
  left: 0.1875rem;
  min-height: 1.5rem;
  position: absolute;
  top: 0.1875rem;
  width: calc(100% - 0.375rem);
}

.c2:focus {
  z-index: 1;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2[aria-disabled='true'],
.c2[aria-disabled='true']:hover {
  color: #B7BBC2;
  pointer-events: none;
}

.c2 span::after {
  content: attr(data-text);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  overflow: hidden;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  visibility: hidden;
}

<div
  aria-label="Test4"
  class="c0"
  role="group"
>
  <button
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-0"
    type="button"
    value="option1"
  >
    <span
      data-text="Option 1"
    >
      Option 1
    </span>
  </button>
  <button
    aria-pressed="true"
    class="c2"
    data-testid="test-toggle-button-1"
    type="button"
    value="option2"
  >
    <span
      data-text="Option 2"
    >
      Option 2
    </span>
  </button>
  <button
    aria-disabled="true"
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-2"
    type="button"
    value="option3"
  >
    <span
      data-text="Option 3"
    >
      Option 3
    </span>
  </button>
  <button
    aria-pressed="false"
    class="c1"
    data-testid="test-toggle-button-3"
    type="button"
    value="option4"
  >
    <span
      data-text="Option 4"
    >
      Option 4
    </span>
  </button>
</div>
`;
